# bin_lift

./: .gitignore  Cargo.toml  Readme.md  mnemonics_to_implement.txt  roadmap_minimal.txt  updated_mnemonics_toimplement.txt
examples/: Readme.md  lift_vmp_trace.rs  new_lift_add.rs  simple_add.rs
examples/files/: raw_instr.data  vmp_trace.asm
src/: compiler.rs  lib.rs  miscellaneous.rs  test_sequences.rs  util.rs
src/compiler/: contexts.rs  error.rs  mod.rs
src/lifter/: common.rs  definintions.rs  error.rs  flagops.rs  getters.rs  mergen_getters_and_setters.rs  mod.rs  retdec_common.rs  retdec_getters.rs  retdec_setters.rs  setters.rs
src/lifter/semantics/: mod.rs
src/lifter/semantics/x86/: binary.rs  bitbyte.rs  call.rs  cmov.rs  convert.rs  dataxfer.rs  flagop.rs  logical.rs  misc.rs  mod.rs  nop.rs  pop.rs  push.rs  ret.rs  rotate.rs  semaphore.rs  setcc.rs  settcc.rs  shift.rs  system.rs  uncond_br.rs
src/semantics/: mod.rs
src/semantics/x86/: binary.rs  convert.rs  dataxfer.rs  flagop.rs  logical.rs  misc.rs  mod.rs  pop.rs  push.rs  ret.rs
