[package]
name = "zydis2llvmir"
version = "0.0.1-dev-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zydis2llvmir"
path = "src/lib.rs"

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0", "llvm17-0-prefer-static"]}
zydis = { version = "4.1.0", features = ["encoder"] }