[package]
name = "bin_lift"
version = "0.0.1-dev-2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zydis2llvmir"
path = "src/lib.rs"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0", "llvm18-0-prefer-static"]}
num = "0.4.3"
zydis = { version = "4.1.1", features = ["encoder"] }
